Fix audio keyframe comment in MSE MP4 parser

Trivial change to reflect the actual logic and intent already in the
code.

BUG=710692
R=chcunningham@chromium.org

Review-Url: https://codereview.chromium.org/2835163004
Cr-Commit-Position: refs/heads/master@{#467388}

Former-commit-id: 8ab986c77a7fae2cbe9c63a50c08246ceb2f3e04